--- a/css/style.css
+++ b/css/style.css
@@ -686,22 +686,54 @@ section {
   line-height: 7.5rem;
 }
 
+.container-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 15vh;
+}
+
+.filter-btn {
+  background-color: var(--dark-blue);
+  color: var(--white);
+  padding: 1rem 1.5rem;
+  margin: 0.5rem;
+  border: none;
+  cursor: pointer;
+  border-radius: 0.25rem;
+  transition: background-color 0.3s ease;
+  font-size: 2rem;
+}
+.filter-btn:hover {
+  background-color: var(--blue);
+  color: var(--black);
+}
+.filter-btn:active, .filter-btn:focus {
+  background-color: var(--blue);
+  color: var(--black);
+  outline: none;
+}
+
 .projects1 {
   background: var(--light-bg);
 }
-.projects1 .heading1 h1 {
+.projects1 .heading {
   color: var(--black);
 }
 .projects1 .gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  gap: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: space-evenly;
 }
 .projects1 .gallery .box {
   border: var(--border);
   box-shadow: var(--box-shadow);
   background: var(--dark-blue);
-  cursor: initial;
+  cursor: pointer;
+  overflow: hidden;
+  width: calc(30% - 1rem); /* Sesuaikan lebar box dengan grid 30rem */
+  margin-bottom: 1rem;
 }
 .projects1 .gallery .box:hover .image img {
   transform: scale(1.1);
@@ -718,7 +750,7 @@ section {
   transition: 0.2s linear;
 }
 .projects1 .gallery .box .content {
-  padding: 2rem;
+  padding: 1rem;
   text-align: center;
 }
 .projects1 .gallery .box .content a.btn {
