--- a/css/style.scss
+++ b/css/style.scss
@@ -744,28 +744,64 @@ section {
     }
 }
 
+.container-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 15vh; 
+}
+
+.filter-btn {
+    background-color: var(--dark-blue);
+    color: var(--white);
+    padding: 1rem 1.5rem;
+    margin: 0.5rem;
+    border: none;
+    cursor: pointer;
+    border-radius: 0.25rem;
+    transition: background-color 0.3s ease;
+    font-size: 2rem;
+
+    &:hover {
+        background-color: var(--blue);
+        color: var(--black);
+    }
+
+    &:active,
+    &:focus {
+        background-color: var(--blue);
+        color: var(--black);
+        outline: none;
+    }
+}    
+
 .projects1 {
     background: var(--light-bg);
 
-    .heading1{
-        h1 {
-            color: var(--black);
-        }
+    .heading {
+        color: var(--black);
     }
 
+    
+
     .gallery {
-        @include grid(30rem);
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        justify-content: space-evenly;
 
         .box {
             border: var(--border);
             box-shadow: var(--box-shadow);
             background: var(--dark-blue);
-            cursor: initial;
+            cursor: pointer;
+            overflow: hidden;
+            width: calc(30% - 1rem); /* Sesuaikan lebar box dengan grid 30rem */
+            margin-bottom: 1rem;
 
             &:hover .image img {
                 transform: scale(1.1);
             }
-
 
             .image {
                 height: 30rem;
@@ -775,23 +811,23 @@ section {
                     height: 100%;
                     width: 100%;
                     object-fit: cover;
-                    transition: .2s linear;
+                    transition: 0.2s linear;
                 }
             }
 
             .content {
-                padding: 2rem;
+                padding: 1rem;
                 text-align: center;
 
-                a.btn{
+                a.btn {
                     color: var(--black);
-                    background-color: var(--white); // Menghapus latar belakang tombol
+                    background-color: var(--white);
                     padding: 1rem 2rem;
                     display: inline-block;
                     text-decoration: none;
                     border-radius: 0.5rem;
                     transition: background-color 0.3s ease;
-    
+
                     &:hover {
                         background-color: var(--blue);
                         color: var(--black);
@@ -812,6 +848,7 @@ section {
         }
     }
 }
+
 
 .reviews {
 
